--- a/analysis/HousePriceRegressionAnalysis.Rmd
+++ b/analysis/HousePriceRegressionAnalysis.Rmd
@@ -75,7 +75,7 @@ What is the price of a home in Ames, Iowa?  Our inaugural project in the program
 
 # Ames, Iowa Data Set
 
-The Ames, Iowa Data Set describes the sale of individual residential properities from 2006-2010 in Ames, Iowa \cite{Cock}. The data was retreved from the dataset hosting site Kaggle, where it is listed under a machine learning competition named \href{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/overview}{\textit{House Prices: Advanced Regression Techniques}} \cite{Kaggle2016}. The data is comprised of 37 numeric features, 43 non-numeric features and an observation index split between a training set and a testing set, which contain 1460 and 1459 observations, respectively. The response variable (`SalePrice`) is only provided for the training set. The output of a model on the test set can be submitted to the Kaggle competition for scoring the performance of the model in terms of RMSE. The first analysis models property sale prices (`SalePrice`) as the response of living room area (`GrLivArea`) of the property and neighborhood (`Neighborhood`) where it is located. In the second analysis variable selection techniques are used to determine which explanatory varaibles are associated with `SalePrice`.
+The Ames, Iowa Data Set describes the sale of individual residential properities from 2006-2010 in Ames, Iowa \cite{Cock}. The data was retreved from the dataset hosting site Kaggle, where it is listed under a machine learning competition named \href{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/overview}{\textit{House Prices: Advanced Regression Techniques}} \cite{Kaggle2016}. The data is comprised of 37 numeric features, 43 non-numeric features and an observation index split between a training set and a testing set, which contain 1460 and 1459 observations, respectively. The response variable (`SalePrice`) is only provided for the training set. The output of a model on the test set can be submitted to the Kaggle competition for scoring the performance of the model in terms of RMSE. The first analysis models property sale prices (`SalePrice`) as the response of living room area (`GrLivArea`) of the property and neighborhood (`Neighborhood`) where it is located. In the second analysis, variable selection techniques are used to determine which explanatory varaibles are associated with `SalePrice` to find a predictive model.
 
 # Analysis Question I
 
@@ -253,10 +253,10 @@ Century 21 has commissioned a second analysis using the same data set, expanded 
 
 Through analyzing our variable selection and cross-validation processes - along with our nascant domain knowledge of residential real estate - we ultimately arrived at a multiple linear regression model featuring 11 linear predictor variables and two interaction terms. Specifically, our variable selection process included direct analysis of a correlation plot and a correlation matrix as well as performing forward selection, backward elimination, and stepwise regression. 
 
-Regarding missing data, we imputed NA values for 19 variables using a combination of the Data Dictionary provided by Century 21 as well as our domain knowledge. After building models with and without transformations applied to variables, we noted no significaznt difference in variable selection from our selection process so elected to use non-transformed predictor variables. We did, however, use the log-transformed `SalePrice` applied in the first analysis.
+Regarding missing data, we imputed NA values for 19 variables using a combination of the data dictionary provided by Century 21 as well as our domain knowledge. After building models with and without transformations applied to variables, we noted no significaznt difference in variable selection from our selection process so elected to use non-transformed predictor variables. We did, however, use the log-transformed `SalePrice` applied in the first analysis.
 
 
-```{r, echo=F}
+```{r, echo=F, results='hide'}
 # Count NAs, impute where needed
 na_count <- sapply(train2, function(cnt) sum(length(which(is.na(cnt)))))
 train2$LotFrontage[is.na(train2$LotFrontage)] <- 0
@@ -338,6 +338,7 @@ final.Forward.Model <- lm(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhoo
 **Backward Elimination**
 
 Backward elimination is a variable selection methodology that begins with all possible predictor variables and works backward, eliminating variables using all possible combinations until only the best for the fit are provided. This employess the "F-to-remove" method from the extra-sum-of-squares F-statistic. For this process, we provided the test a model with all available predictor variables from which insignificant variables were eliminated. The suggested model shown in section \ref{appendix:backSelection}.
+
 ```{r, echo=F, results='hide'}
 # Backward Elimination
 model2.Backward <- stepAIC(model2.Allvar, direction = "backward", trace = F, scope = formula(model2.forward.Start))
@@ -431,17 +432,16 @@ fitFull.all4.Final <- lm(log(SalePrice) ~ BsmtUnfSF + CentralAir + HalfBath + Ki
 
 ## Model Assumption Assessment
 
+The assumption assessment plots were similar for all four models. The assumption assessment plots and discussion for the custom model are provided here with Figure \@ref(fig:custom-assumptions). The assumption assessment plots for the other three models are provided for reference in section \ref{appendix:assessmentPlots}.
 
-**Custom Model Assumptions**
+Based on the residuals vs. fitted plot, there seems to be strong linearity in the custom model, along with constant variance. The standardized residuals do not appear to exhibit a discernible pattern, indicating constant variance along the regression, or homoscedasticity. While there some outliers, this is not appear to be an egregious violation. 
 
-Based on the below residuals vs. fitted plot, there seems to be strong linearity in the custom model, along with constant variance. Furthermore, while there is one outlier, there is not an egregious violation of any other residuals. The red line very closely approximates the gray dashed line, which furthermore supports the arguement of a well-fit model.
+Based on the QQ plot, there is a small level of deviation on the ends of the distribution of the errors, but for the most part, the errors adhere to normality. The sample size should be sufficient to protect against this non-normality.
 
-Based on the QQ plot, there is a small level of deviation on the ends of the distribution of the errors, but for the most part, the errors adhere to normality.
+Based on the standardized residuals vs. leverage plot, only a few values have high leverage and are outlying. However, these violations do not appear to be egregious.
 
-In analyzing the standardized residuals scale-location plot, the line has a slight curve, but for the most part is linear, indicating constant variance, or homoscedasticity.
 
-Based on the residuals vs. leverage plot, only two values have high leverage and only one point has a high Cook's distance. However, these are only three data points of over a 1,400 so this is not cause for concern.
-```{r, custom-assumptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Custom Assumption Plots', out.width = '45%', fig.pos="htbp", fig.show = 'hold'}
+```{r, custom-assumptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Custom Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show = 'hold'}
 #par(mfrow=c(2,2))
 #plot(fitFull.all4.Final, main = "Custom Model")
 
@@ -451,42 +451,7 @@ basic.fit.plots(train2, fitFull.all4.Final)
 ols_plot_resid_lev(fitFull.all4.Final)
 ```
 
-
-**Forward Selection Model Assumptions**
-
-Based on the below residuals vs. fitted plot, there seems to be reasonable linearity in the custom model, along with constant variance. Furthermore, while there are some outliers, there is not an egregious violation of any other residuals. The red line very closely approximates the gray dashed line, which furthermore supports the arguement for a well-fit model.
-
-Based on the QQ plot, there is a some deviation towards the tails of the distribution of the errors, but as with the custom plots, the large majority of errors adhere to normality.
-
-In analyzing the standardized residuals scale-location plot, the line has a moderate curve, indicating some violation of homoscedasticity. However, this is due to a few outliers and as more data is added, the line should straighten out more.
-
-Based on the residuals vs. leverage plot, there are a few more values than the custom model that have high leverage or a moderately large Cook's distance. However, since these are only a few data points, there is not a large cause for concern with this model.
-
-```{r, forward-assumptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Forward Selection Assumption PLots', out.width = '50%', fig.pos="htbp"}
-par(mfrow=c(2,2))
-plot(model2.Forward, main = "Forward Selection Model")
-```
-
-
-**Backward Elimination Model Assumptions**
-
-The backward elimination and stepwise regression models comprised the same parameters. Therefore, they shared the same plots. Compared to the forward selection model, all plots are very similar. Thus, model assumptions are roughly the same.
-
-
-```{r, backward-selection, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Backward Selection Assumption PLots', out.width = '50%', fig.pos="htbp"}
-par(mfrow=c(2,2))
-plot(model2.Backward, main = "Backward Elimination Model")
-```
-
-**Stepwise Regression model plots**
-
-
-
-```{r, stepwise-assimptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Stepwise Selection Assumption Plots', out.width = '50%', fig.pos="htbp"}
-par(mfrow=c(2,2))
-plot(model2.Stepwise, main = "Stepwise Regression Model")
-```
-
+\newpage
 
 ## Comparing Competing Models
 
@@ -691,7 +656,9 @@ kable(data.frame('Model' = c('Custom', 'Forward Selection', 'Backward Selection'
 
 ## Conclusion
 
-A short summary of the analysis
+In an effort to produce very predictive model with linear regression, all explanatory variables were considered with three types of varaible selection techniques: forward selection, backward selection, stepwise selection. A custom model was initially produced by eleminating variables suggested for elimination by the automatic selection processes, exploring the data with pairwise scatter plots, and adding interaction terms based on graphical analysis and domain knowledge. Automated selection was reapplied to suggest terms from the initial custom model. The final models suggested by automated techniques produced high $R^2$ values, but performed poorly on the Kaggle test set. This suggests the automated techniques were overfitting to the training data. The final custom model, produced a high $R^2$ value and perfromed well on the Kaggle test set (see section \ref{appendix:kaggle}). This suggests that the custom model is not overfitting to the traing data and generalizes well to an unseen dataset.
+
+\newpage
 
 # Appendix
 
@@ -855,12 +822,50 @@ log(SalePrice) ~
 
 ## Kaggle Score
 
+\label{appendix:kaggle}
+
 The following image shows the result on Kaggle for the custom model.
 
-```{r, kaggel, echo=F, out.width='90%', fig.align='center'}
+```{r, kaggle, echo=F, out.width='90%', fig.align='center'}
 knitr::include_graphics('./Evidence for Model Score on Kaggle.PNG')
 ```
 
+\newpage
+
+## Assumption Assessment Plots for Automatic Selection Models
+
+\label{appendix:assessmentPlots}
+
+The following discussion applies to the assumption assessment for the three models produced by automatic selection.
+
+Based on the residuals vs. fitted plot, there seems to be strong linearity in the custom model, along with constant variance. The standardized residuals do not appear to exhibit a discernible pattern, indicating constant variance along the regression, or homoscedasticity. However, there are three observations with unusually high residuals.
+
+Based on the QQ plot, there is a small level of deviation on the ends of the distribution of the errors, but for the most part, the errors adhere to normality. The sample size should be sufficient to protect against this non-normality.
+
+Based on the standardized residuals vs. leverage plot, only a few values have high leverage and are outlying. Compared to the custom model (Figure \@ref(fig:custom-assumptions)), these diagnostic plots for these models show a few more influential observations with high leverage. However, these observations cannot be excluded from the model.
+
+```{r, forward-assumptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Forward Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
+# create plots of residuals
+basic.fit.plots(train2, model2.Forward)
+# create leverage / outlier plot
+ols_plot_resid_lev(model2.Forward)
+```
+
+
+```{r, backward-selection, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Backward Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
+# create plots of residuals
+basic.fit.plots(train2, model2.Backward)
+# create leverage / outlier plot
+ols_plot_resid_lev(model2.Backward)
+```
+
+
+```{r, stepwise-assimptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Stepwise Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
+# create plots of residuals
+basic.fit.plots(train2, model2.Stepwise)
+# create leverage / outlier plot
+ols_plot_resid_lev(model2.Stepwise)
+```
 
 \newpage
 
@@ -1163,16 +1168,8 @@ confint(glht(model, linfct = "GrLivArea + GrLivArea:Neighborhood_BrkSide = 1"))
 
 ## R Code For Analysis 2
 
-Include "well commented" `code` in the appendex!
-
 ```r
-train %>% ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
-  geom_point(alpha = 0.3) +
-  labs(title = 'Log of Sale Price vs Living Room Area', 
-       y = 'Log of Sale Price', x = 'Living Room Area') +
-  geom_text(aes(label = ifelse((log(GrLivArea) > 7.75 & log(SalePrice) > 11) |
-                                 (log(SalePrice) > 12.45),
-                               SaleCondition, '')), hjust=0, vjust=0)
+
 ```
 
 \newpage
